stampForce/src/objects/Stampforce_Code__c.object
<CustomObject>
    <description>Codes generated by a sponsor that may be redeemed by a user to prove interaction.</description>
    <fields>
        <fullName>Been_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this code been used?</description>
        <inlineHelpText>Has this code been used?</inlineHelpText>
        <label>Been Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>What is this stamp code</description>
        <externalId>true</externalId>
        <inlineHelpText>What is this stamp code</inlineHelpText>
        <label>Code</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Which event is this code for?</description>
        <inlineHelpText>Which event is this code for?</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Stampforce Codes</relationshipLabel>
        <relationshipName>Stampforce_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Generated_By__c</fullName>
        <description>Who generated this stamp code?</description>
        <inlineHelpText>Who generated this stamp code?</inlineHelpText>
        <label>Generated By</label>
        <referenceTo>Stampforce_User__c</referenceTo>
        <relationshipLabel>Stampforce Codes</relationshipLabel>
        <relationshipName>Stampforce_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsorship__c</fullName>
        <description>Which sponsorship is this code valid for?</description>
        <inlineHelpText>Which sponsorship is this code valid for?</inlineHelpText>
        <label>Sponsorship</label>
        <referenceTo>Sponsorship__c</referenceTo>
        <relationshipLabel>Stampforce Codes</relationshipLabel>
        <relationshipName>Stampforce_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stampforce Code</label>
    <nameField>
        <displayFormat>CODE-{0000000}</displayFormat>
        <label>Generated Codes</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE0000000PikbMAC_00NE0000000kZKcMAM</fullName>
        <active>true</active>
        <field>Stamp__c.Stampforce_Code__c</field>
        <filterItems>
            <field>Stampforce_Code__c.Been_Used__c</field>
            <operation>equals</operation>
            <value>false</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Stamp_Stampforce Code</name>
    </namedFilters>
    <pluralLabel>Stampforce Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>